force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/vlocity_cmt__OrderItemAdPlacement__c.object-meta.xml
<CustomObject>
    <description>The Order Ad Placement is an extension to the Order LineItem and captures the details specific to an Ad Placement.</description>
    <label>Order Ad Placement</label>
    <nameField>
        <label>Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Ad Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>