force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__AdCreativeUrl__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdCreativeUrl__c</fullName>
    <description>URL to the Ad Creative. It may or may not hosted by Salesforce platform.</description>
    <label>Ad Creative URL</label>
    <type>Url</type>
</CustomField>