force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__AdPlacementPriorityType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdPlacementPriorityType__c</fullName>
    <description>This defines the Priority of the Ad Creative in Ad Server.</description>
    <label>Ad Placement Priority Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>