force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__AdRequestedEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdRequestedEndDate__c</fullName>
    <label>Ad Requested End Date</label>
    <type>DateTime</type>
</CustomField>