force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__AdRequestedStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdRequestedStartDate__c</fullName>
    <label>Ad Requested Start Date</label>
    <type>DateTime</type>
</CustomField>