force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__AdServerOrderLineIdentiifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerOrderLineIdentiifier__c</fullName>
    <description>This is used to capture the Order Line ItemId generated at the Ad Server.</description>
    <externalId>true</externalId>
    <label>Ad Server Order Line Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>