force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__AdTimePerEpisode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdTimePerEpisode__c</fullName>
    <description>Captures the commercial time (in seconds) for each installment or episode.</description>
    <label>Ad Time Per Episode</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>