force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__GrossRatingPoint__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__GrossRatingPoint__c</fullName>
    <description>Calculates the Gross Rating Point by multiplying the Audience Size Rating of the Ad Space specification by the paid Commercial Time per Linear Commercial Time Slot Unit.</description>
    <label>Gross Rating Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>