force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__MaximumUserFrequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaximumUserFrequency__c</fullName>
    <description>The max number of times a unique user sees the Ad over a given time period.</description>
    <label>Maximum User Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>