force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Ad Placements</relationshipLabel>
    <relationshipName>OrderItemAdPlacements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>