force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__SponsorshipType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SponsorshipType__c</fullName>
    <description>Captures the Advertiser&apos;s Sponsorship Type for the Placement.</description>
    <label>Sponsorship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presented By</fullName>
            </value>
            <value>
                <fullName>Co Presented By</fullName>
            </value>
            <value>
                <fullName>Sponsored By</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>