force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__TargetingParameters__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TargetingParameters__c</fullName>
    <description>Ad Creative Targeting Parameters stored in JSON format.</description>
    <label>Targeting Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>