force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__TotalAdTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalAdTime__c</fullName>
    <description>Captures the total paid and bonus commercial time (in seconds) for the placement.</description>
    <label>Total Ad Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>