force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__UserEngagementGoalType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserEngagementGoalType__c</fullName>
    <description>This is a user engagement goal defined in terms of clicks, impressions, etc.</description>
    <label>User Engagement Goal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>