force-app/main/default/objects/vlocity_cmt__OrderItemAdPlacement__c/fields/vlocity_cmt__UserEngagementGoalUnitType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserEngagementGoalUnitType__c</fullName>
    <description>The Type of the User Engagement Goal Unit. Example : Daily, Lifetime etc.</description>
    <label>User Engagement Goal Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>